--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,10 @@
       </section>
       <footer>
         <p>This project is maintained by <a href="https://www.zhou-yang.cn"> <strong>ZHOU YANG<strong></a></p>
-        //{% if site.github.is_project_page %}
-        //<p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        //{% endif %}
-        //<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <!--{% if site.github.is_project_page %}
+        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>-->
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
