--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://zhou-yang.cn"><strong>ZHOUYANG<strong></a></p>
+        <p>This project is maintained by <a href="https://zhou-yang.cn">ZHOU YANG</a></p>
         <!--{% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
