--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
       </section>
       <footer>
         <p>This project is maintained by <a href="https://www.zhou-yang.cn">zhou yang</a></p>
-        <p><strong>©</strong> <script>document.write(new Date().getFullYear())</script> ZHOU YANG All rights reserved.</p>
+        <p><strong>© <script>document.write(new Date().getFullYear())</script></strong> zhou yang. All rights reserved.</p>
         <!--{% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
