--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">ZHOU YANG</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}"><center>ZHOU YANG</center></a></h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -45,7 +45,7 @@
       </section>
       <footer>
         <p>This project is maintained by <a href="https://www.zhou-yang.cn">zhou yang</a></p>
-        <p>Copyright © <script>document.write(new Date().getFullYear())</script></p>
+        <p>© <script>document.write(new Date().getFullYear())</script></p>
         <!--{% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
