--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,13 @@
   <body>
       <div class="wrapper">
       <header>
+      <div class="ui dropdown">
+      Language
+      <div class="menu">
+      <div class="item">Choice 1</div>
+      <div class="item">Choice 3</div>
+  </div>
+</div>
                <h1><a href="{{ "/" | absolute_url }}"><center>ZHOU YANG</center></a></h1>
 
         {% if site.logo %}
